<resources>
    <string name="app_name">Mylogbook</string>

    // Authentication
    <string name="auth_sign_up">Sign Up</string>
    <string name="auth_add_account">Add Account</string>
    <string name="auth_create_account">Create Account</string>
    <string name="auth_log_in">Log In</string>
    <string name="auth_forgot_password">Forgot Password?</string>

    // User
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_birthdate">Birthdate</string>

    // System
    <string name="system_open_mail">Open Mail</string>

    // Sign Up
    <string name="sign_up_success_title">One more step</string>
    <string name="sign_up_success_message">
        An email has been sent to you, go to it and click on the link provided. This step will
        help us verify your account and keep your details safe!
    </string>

    // Password Reset
    <string name="password_reset_sent_title">Reset Link Sent</string>
    <string name="password_reset_sent_message">
        An email has been sent to you, go to it and click on the link provided. You will be taken
        to a form where you can reset your password.
    </string>

    // Car
    <string name="car">Car</string>
    <string name="car_name">Name</string>
    <string name="car_registration">Registration</string>
    <string name="car_type">Type</string>
    <string name="car_type_content_description">Car Type</string>
    <string name="car_new_title">New Car</string>
    <string name="car_edit_title">Edit Car</string>

    <plurals name="cars_deleted">
        <item quantity="one">Deleted %1$d car</item>
        <item quantity="other">Deleted %1$d cars</item>
    </plurals>

    <string-array name="car_types">
        <item>Sedan</item>
        <item>Wagon</item>
        <item>SUV</item>
        <item>Off Road</item>
        <item>Hatchback</item>
        <item>Coupe</item>
        <item>Convertible</item>
        <item>Sports</item>
        <item>Ute</item>
        <item>Micro</item>
        <item>Van</item>
    </string-array>

    // Supervisor
    <string name="supervisor">Supervisor</string>
    <string name="supervisor_name">Name</string>
    <string name="supervisor_gender">Gender</string>
    <string name="supervisor_gender_male">Male</string>
    <string name="supervisor_gender_female">Female</string>
    <string name="supervisor_accredited">Certified</string>
    <string name="supervisor_gender_content_description">Supervisor Gender</string>
    <string name="supervisor_new_title">New Supervisor</string>
    <string name="supervisor_edit_title">Edit Supervisor</string>

    <plurals name="supervisors_deleted">
        <item quantity="one">Deleted %1$d supervisor</item>
        <item quantity="other">Deleted %1$d supervisors</item>
    </plurals>

    // Log
    <string name="log_odometer">Odometer (km)</string>
    <string name="log_recording">Recording</string>
    <string name="log_recording_content_description">Vehicle Driving</string>
    <string name="log_recording_divider">|</string>
    <string name="log_prepare_title">Prepare Trip</string>
    <string name="log_cancel_recording_title">Cancel Recording</string>
    <string name="log_cancel_recording_message">
        Are you sure you want to cancel the recording? All progress will be lost.
    </string>

    <string name="log_weather">Weather</string>
    <string name="log_weather_clear">Clear</string>
    <string name="log_weather_rain">Rain</string>
    <string name="log_weather_thunder">Thunder</string>
    <string name="log_weather_fog">Fog</string>
    <string name="log_weather_hail">Hail</string>
    <string name="log_weather_snow">Snow</string>

    <string name="log_traffic">Traffic</string>
    <string name="log_traffic_light">Light</string>
    <string name="log_traffic_moderate">Moderate</string>
    <string name="log_traffic_heavy">Heavy</string>

    <string name="log_road">Roads</string>
    <string name="log_road_local_street">Local Street</string>
    <string name="log_road_main_road">Main Road</string>
    <string name="log_road_freeway">Freeway</string>
    <string name="log_road_gravel">Gravel</string>
    <string name="log_road_inner_city">Inner City</string>
    <string name="log_road_rural_road">Rural Road</string>

    <string name="log_details">Trip Details</string>
    <string name="log_route">Route</string>
    <string name="log_start_location">Started At (Suburb)</string>
    <string name="log_end_location">Ended At (Suburb)</string>

    // Setup
    <string name="setup">Setup</string>
    <string name="setup_learner_permit_question">When did you receive your learner permit?</string>
    <string name="setup_license_received_hint">Received On</string>
    <string name="setup_settings_hint">You can change this in your settings at a later time</string>
    <string name="setup_state_question">Which state do you currently reside in?</string>

    // Dashboard
    <string name="dashboard">Dashboard</string>

    // Settings
    <string name="settings">Settings</string>
    <string name="settings_email_title">Email</string>
    <string name="settings_license_obtained_title">License obtained</string>
    <string name="settings_state_title">State</string>
    <string name="settings_state_dialog_title">Select State</string>
    <string name="settings_entries_title">Entries</string>
    <string name="settings_entries_summary">Enter time recorded outside of Mylogbook</string>
    <string name="settings_legal_title">Legal &amp; Privacy</string>
    <string name="settings_legal_privacy_policy_title">Privacy Policy</string>
    <string name="settings_legal_terms_of_service_title">Terms of Service</string>
    <string name="settings_feedback_title">Send Feedback</string>
    <string name="settings_feedback_general_title">Tell us what you love and hate</string>
    <string name="settings_feedback_bug_title">Report a bug</string>
    <string name="settings_feedback_help_title">Request help</string>
    <string name="settings_logout_title">Log out</string>
    <string name="settings_entry_day_title">Day</string>
    <string name="settings_entry_night_title">Night</string>
    <string name="settings_entry_day_dialog_title">Enter day driving completed (minutes)</string>
    <string name="settings_entry_night_dialog_title">Enter night driving completed (minutes)</string>
    <string name="settings_entries_category_time_title">Time</string>
    <string name="settings_entries_category_accredited_time_title">Accredited Time</string>

    <string-array name="australian_states">
        <item>Victoria</item>
        <item>Queensland</item>
        <item>New South Whales</item>
        <item>Tasmania</item>
        <item>South Australia</item>
        <item>Western Australia</item>
    </string-array>

    // Export
    <string name="export">Export</string>

    // Unit
    <string name="unit_km">km</string>

    // Actions
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_next">Next</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_stop">Stop</string>

    // Bottom Nav
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="bottom_nav_cars">Cars</string>
    <string name="bottom_nav_supervisors">Supervisors</string>
    <string name="bottom_nav_log">Log</string>

    // Error
    <string name="error_connection_timeout">Connection timed out.</string>
    <string name="error_email_taken">This email is already taken</string>
    <string name="error_invalid_credentials">
        Bad email and password combination or unverified email
    </string>
    <string name="error_one_account_only">Only one Mylogbook account is allowed</string>
    <string name="error_no_account">No account exists with this email</string>
</resources>
