<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">

        <ImageView
            android:id="@+id/avatarImageView"
            android:src="@drawable/supervisor_male"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/supervisor_gender_content_description"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supervisor_name"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supervisor_gender"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:gravity="center">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/genderMaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:checked="true"
                    android:text="@string/supervisor_gender_male"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/genderFemaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supervisor_gender_female"/>

            </LinearLayout>

        </RadioGroup>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/accreditedSwitch"
            android:hint="@string/supervisor_accredited"
            android:textColorHint="@color/colorSecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>