<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_learner_permit_question"
            android:textColor="@color/secondaryText"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/licenceReceivedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setup_license_received_hint"
            android:layout_marginBottom="12dp"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/licenceReceivedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_next"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/light_bulb"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/hintText"
            android:text="@string/setup_settings_hint"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</ScrollView>