<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mylb.mylogbook.presentation.ui.activity.auth.SignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_progress_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_marginBottom="12dp"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:layout_marginBottom="12dp"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:layout_marginBottom="12dp"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthdateTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_birthdate"
                android:layout_marginBottom="24dp"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/birthdateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_create_account"
                android:enabled="false"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
