<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">

        <ImageView
            android:id="@+id/typeImageView"
            android:src="@drawable/car_sedan"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/car_type_content_description"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_name"
            android:layout_marginBottom="12dp"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registrationTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_registration"
            android:layout_marginBottom="24dp"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registrationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

</ScrollView>