<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/bottomBar"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:text="0 s"
            android:id="@+id/timeTextView"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/log_recording_divider"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:text="0 km"
            android:id="@+id/distanceTextView"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="4dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/stopButton"
            android:text="@string/action_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottomBar">

        <include layout="@layout/view_progress_bar" />

    </LinearLayout>

    <ImageView
        android:id="@+id/recordingImageView"
        android:src="@drawable/log_sedan_recording"
        android:scaleType="fitXY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/progressBarContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/log_recording_content_description"/>

</android.support.constraint.ConstraintLayout>